--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
                 <p><i class="fa fa-github fa-fw"></i><a href="//github.com/{{ site.author.github }}" target="_blank">  @{{ site.author.github }} </a></p>
                 <p><i class="fa fa-linkedin-square fa-fw"></i> <a href="//linkedin.com/in/{{ site.author.linkedin }}" target="_blank"> linkedin.com/in/{{ site.author.linkedin }} </a></p>
                 <p><i class="fa fa-twitter fa-fw"></i> <a href="//twitter.com/{{ site.author.twitter }}" target="_blank">  @{{ site.author.twitter }} </a></p>
+                <p><i class="fa fa-skype fa-fw"></i> <a href="{{ site.author.skypeurl }}" target="_blank">  @{{ site.author.skype }} </a></p>
             </div>
             <div class="col-sm-4 visible-md-block visible-lg-block">
                 <a href="#" onclick="window.print();" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
