--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,19 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="col-md-12">
+                <ul>
+                    {% for link in site.footerLinks %}
+                        <li>
+                            <a href="{{ site.url }}/{{ link.url }}">{{ link.label }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="col-md-12">
                 Copyright &copy; 2016 {{ site.author.name }} - All rights reserved.
             </div>
         </div>
