--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
                 <ul>
                     {% for link in site.footerLinks %}
                         <li>
-                            <a href="{{ site.url }}/{{ link.url }}">{{ link.label }}</a>
+                            <a class="link" href="{{ site.url }}/{{ link.url }}">{{ link.label }}</a>
                         </li>
                     {% endfor %}
                 </ul>
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="col-md-12">
-                Copyright &copy; 2016 {{ site.author.name }} - All rights reserved.
+                Copyright &copy; 2016 to present {{ site.author.name }} - All rights reserved.
             </div>
         </div>
     </div>
