--- a/assets/css/resumecard.css
+++ b/assets/css/resumecard.css
@@ -512,3 +512,13 @@ hr {
 .ribbon.white a{
   border: 2px dotted rgba(100,100,100,0.2);
 }
+
+a.link {
+    color: #23337c;
+}
+
+.footer li {
+    list-style: none;
+    display: inline;
+    margin-left: 20px;
+}
