--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
             </div>
             <div class="col-sm-4 visible-md-block visible-lg-block">
                 <a href="#" onclick="window.print();" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
+                <a href="#" class="btn btn-dark"><i class="icon-file icon-white"></i> Hire Me 😊 </a>
             </div>
         </div>
     </div>
