--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,20 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="col-sm-4">
-                <img src="{{ site.favicon | prepend: site.baseurl }}" title="Avatar" alt="My Avatar">
+                <img src="{{ site.avtar | prepend: site.baseurl }}" title="Avatar" alt="My Avatar">
                 <h4>{{ site.author.name }}</h4>
                 <p>{{ site.author.title }}</p>
                 <p class="muted">{{ site.author.address }}</p>
                 <div class="clearfix"></div>
             </div>
             <div class="col-sm-4 visible-md-block visible-lg-block visible-sm-block">
-                <p><i class="fa fa-envelope-o fa-fw"></i> {{ site.author.email }} </p>
-                <p><i class="fa fa-github fa-fw"></i><a href="//github.com/{{ site.author.github }}" target="_blank">  @{{ site.author.github }} </a></p>
+                <p>
+                    <i class="fa fa-envelope-o fa-fw"></i> 
+                    <a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>  
+                </p>
+                <p>
+                    <i class="fa fa-github fa-fw"></i>
+                    <a href="//github.com/{{ site.author.github }}" target="_blank">  @{{ site.author.github }} </a></p>
                 <p><i class="fa fa-linkedin-square fa-fw"></i> <a href="//linkedin.com/in/{{ site.author.linkedin }}" target="_blank"> linkedin.com/in/{{ site.author.linkedin }} </a></p>
                 <p><i class="fa fa-twitter fa-fw"></i> <a href="//twitter.com/{{ site.author.twitter }}" target="_blank">  @{{ site.author.twitter }} </a></p>
                 <p><i class="fa fa-skype fa-fw"></i> <a href="{{ site.author.skypeurl }}" target="_blank">  @{{ site.author.skype }} </a></p>
