--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
                 <img src="{{ site.avtar | prepend: site.baseurl }}" title="Avatar" alt="My Avatar">
                 <h4>{{ site.author.name }}</h4>
                 <p>{{ site.author.title }}</p>
+                <p>कर्मण्येवाधिकारस्ते मा फलेषु कदाचन । मा कर्मफलहेतुर्भूर्मा ते सङ्गोऽस्त्वकर्मणि ॥</p>
                 <p class="muted">{{ site.author.address }}</p>
                 <div class="clearfix"></div>
             </div>
@@ -15,10 +16,34 @@
                 </p>
                 <p>
                     <i class="fa fa-github fa-fw"></i>
-                    <a href="//github.com/{{ site.author.github }}" target="_blank">  @{{ site.author.github }} </a></p>
-                <p><i class="fa fa-linkedin-square fa-fw"></i> <a href="//linkedin.com/in/{{ site.author.linkedin }}" target="_blank"> linkedin.com/in/{{ site.author.linkedin }} </a></p>
-                <p><i class="fa fa-twitter fa-fw"></i> <a href="//twitter.com/{{ site.author.twitter }}" target="_blank">  @{{ site.author.twitter }} </a></p>
-                <p><i class="fa fa-skype fa-fw"></i> <a href="{{ site.author.skypeurl }}" target="_blank">  @{{ site.author.skype }} </a></p>
+                    <a href="//github.com/{{ site.author.github }}" target="_blank">  
+                        @{{ site.author.github }} 
+                    </a>
+                </p>
+                <p>
+                    <i class="fa fa-linkedin-square fa-fw"></i> 
+                    <a href="//linkedin.com/in/{{ site.author.linkedin }}" target="_blank"> 
+                        linkedin.com/in/{{ site.author.linkedin }} 
+                    </a>
+                </p>
+                <p>
+                    <i class="fa fa-stack-exchange fa-fw"></i>
+                    <a href="//magento.stackexchange.com/users/{{ site.author.magento_stackexchange }}" target="_blank">  
+                        @{{ site.author.github }} 
+                    </a>
+                </p>
+                <p>
+                    <i class="fa fa-twitter fa-fw"></i> 
+                    <a href="//twitter.com/{{ site.author.twitter }}" target="_blank">  
+                        @{{ site.author.twitter }} 
+                    </a>
+                </p>
+                <p>
+                    <i class="fa fa-skype fa-fw"></i> 
+                    <a href="{{ site.author.skypeurl }}" target="_blank">  
+                        @{{ site.author.skype }} 
+                    </a>
+                </p>
             </div>
             <div class="col-sm-4 visible-md-block visible-lg-block">
                 <a href="#" onclick="window.print();" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
