--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
                 <img src="{{ site.avtar | prepend: site.baseurl }}" title="Avatar" alt="My Avatar">
                 <h4>{{ site.author.name }}</h4>
                 <p>{{ site.author.title }}</p>
+                <p>&nbsp;</p>
                 <p>कर्मण्येवाधिकारस्ते मा फलेषु कदाचन । मा कर्मफलहेतुर्भूर्मा ते सङ्गोऽस्त्वकर्मणि ॥</p>
                 <p class="muted">{{ site.author.address }}</p>
                 <div class="clearfix"></div>
