--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8684046709077789" crossorigin="anonymous"></script>
+  </head>
 	<div class="ribbon right red">
 	  <a href="#">Thank you!</a>
 	</div>
