--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
 <div class="header">
+    <div class="ribbon right red">
+        <a href="#">Thank you!</a>
+    </div>
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="col-sm-4">
