--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,6 +48,12 @@
                         @{{ site.author.skype }} 
                     </a>
                 </p>
+                <p>
+                    <i class="fa fa-skype fa-fw"></i> 
+                    <a href="//codepen.io/{{ site.author.codepen }}" target="_blank">  
+                        @{{ site.author.codepen }} 
+                    </a>
+                </p>
             </div>
             <div class="col-sm-4 visible-md-block visible-lg-block">
                 <a href="#" onclick="window.print();" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
