--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
                     </a>
                 </p>
                 <p>
-                    <i class="fa fa-skype fa-fw"></i> 
+                    <i class="fab fa-codepen"></i>
                     <a href="//codepen.io/{{ site.author.codepen }}" target="_blank">  
                         @{{ site.author.codepen }} 
                     </a>
