--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
                 </p>
             </div>
             <div class="col-sm-4 visible-md-block visible-lg-block">
-                <a href="#" onclick="window.print();" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
+                <a href="https://docs.google.com/document/d/1AuxXG91fEhc-5ha0f-W2GvTQ-XnyvuavV6gZMTmPs2s/edit?usp=sharing" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
                 <a href="//www.upwork.com/freelancers/~{{ site.author.upwork }}" class="btn btn-dark"><i class="icon-file icon-white"></i> Hire Me 😊 </a>
             </div>
         </div>
