--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
                 <p class="muted">{{ site.author.address }}</p>
                 <div class="clearfix"></div>
             </div>
-            <div class="col-sm-4 visible-md-block visible-lg-block visible-sm-block">
+            <div class="col-sm-4">
                 <p>
                     <i class="fa fa-envelope-o fa-fw"></i> 
                     <a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>  
@@ -55,7 +55,7 @@
                     </a>
                 </p>
             </div>
-            <div class="col-sm-4 visible-md-block visible-lg-block">
+            <div class="col-sm-4">
                 <a href="https://docs.google.com/document/d/1AuxXG91fEhc-5ha0f-W2GvTQ-XnyvuavV6gZMTmPs2s/edit?usp=sharing" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
                 <a href="//www.upwork.com/freelancers/~{{ site.author.upwork }}" class="btn btn-dark"><i class="icon-file icon-white"></i> Hire Me 😊 </a>
             </div>
