--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,8 +56,8 @@
                 </p>
             </div>
             <div class="col-sm-4">
-                <a href="https://docs.google.com/document/d/1AuxXG91fEhc-5ha0f-W2GvTQ-XnyvuavV6gZMTmPs2s/edit?usp=sharing" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
-                <a href="//www.upwork.com/freelancers/~{{ site.author.upwork }}" class="btn btn-dark"><i class="icon-file icon-white"></i> Hire Me 😊 </a>
+                <a href="#" onclick="window.print()" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
+                <a href="https://docs.google.com/document/d/1AuxXG91fEhc-5ha0f-W2GvTQ-XnyvuavV6gZMTmPs2s/edit?usp=sharing" class="btn btn-dark"><i class="icon-file icon-white"></i> Resume 😊 </a>
             </div>
         </div>
     </div>
